--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -25,7 +25,7 @@
     "ee-gcc2.9-990721": "EE GCC 2.9 build 990721",
     "ee-gcc2.9-991111": "EE GCC 2.9 build 991111",
     "ee-gcc2.9-991111a": "EE GCC 2.9 build 991111a",
-    "ee-gcc2.9-991111b/r4": "EE GCC 2.9 build 991111b/r4",
+    "ee-gcc2.9-991111b-r4": "EE GCC 2.9 build 991111b/r4",
     "ee-gcc2.9-991111-01": "EE GCC 2.9 build 991111-01",
     "ee-gcc2.95.2-273a": "EE GCC 2.95.2 (SN BUILD v2.73a)",
     "ee-gcc2.95.2-274": "EE GCC 2.95.2 (SN BUILD v2.74)",
