--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -108,12 +108,14 @@
     "mwcc_233_163": "2.3.3 build 163 (GC MW 1.2.5)",
     "mwcc_233_163e": "2.3.3 build 163 (GC MW 1.2.5e)",
     "mwcc_233_163n": "2.3.3 build 163 (GC MW 1.2.5n)",
+    "mwcc_242_53": "2.4.2 build 53 (GC MW 1.3)",
     "mwcc_242_81": "2.4.2 build 81 (GC MW 1.3.2)",
-    "mwcc_242_81r": "2.4.2 build 81 (GC MW 1.3.2r)",
+    "mwcc_242_81r": "2.4.2 build 81 (Patched GC MW 1.3.2)",
     "mwcc_247_105": "2.4.7 build 105 (GC MW 2.5)",
     "mwcc_247_107": "2.4.7 build 107 (GC MW 2.6)",
     "mwcc_247_108": "2.4.7 build 108 (GC MW 2.7)",
     "mwcc_247_92": "2.4.7 build 92 (GC MW 2.0)",
+    "mwcc_247_92p1": "2.4.7 build 92 (Patched GC MW 2.0)",
     "mwcc_30_114": "3.0 build 114 (MW 2.0base)",
     "mwcc_30_123": "3.0 build 123 (MW 2.0sp1)",
     "mwcc_30_126": "3.0 build 126 (MW 2.0sp1p2)",
