--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -186,15 +186,13 @@
     "psyq3.5": "PSYQ3.5 (gcc 2.6.0 + aspsx 2.34)",
     "psyq3.6": "PSYQ3.6 (gcc 2.7.2 + aspsx 2.34)",
     "psyq4.0": "PSYQ4.0 (gcc 2.7.2 + aspsx 2.56)",
-    "psyq4.1": "PSYQ4.1 (gcc 2.7.2-970404 + aspsx 2.67)",
+    "psyq4.1": "gcc 2.7.2-970404 + aspsx 2.67 (CCPSX)",
     "psyq4.3": "PSYQ4.3 (gcc 2.8.0 + aspsx 2.77)",
-    "psyq4.4": "PSYQ4.4 (gcc 2.8.1 + aspsx 2.79)",
-    "psyq4.5": "PSYQ4.5 (gcc 2.91.66 + aspsx 2.81)",
-    "psyq4.6": "PSYQ4.6 (gcc 2.95.2 + aspsx 2.86)",
+    "psyq4.4": "gcc 2.8.1 + aspsx 2.79 (CCPSX)",
+    "psyq4.5": "gcc 2.91.66 + aspsx 2.81 (CCPSX)",
+    "psyq4.6": "gcc 2.95.2 + aspsx 2.86 (CCPSX)",
 
     "psyq_263_221": "gcc 2.6.3 + aspsx 2.21",
-
-    "psyq4.4-ccpsx": "CCPSX (PSYQ4.4: gcc 2.8.1 + aspsx 2.79)",
 
     "mwccpsp_3.0.1_121": "MWCC 1.0 (3.0.1 121)",
     "mwccpsp_3.0.1_134": "MWCC 1.0 Hotfix 2 (3.0.1 134)",
