Add floating point flags to msvc

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -362,6 +362,10 @@
     "msvc_codegen./G5": "optimize for Pentium",
     "msvc_codegen./G6": "optimize for Pentium Pro",
     "msvc_codegen./GB": "optimize for blended model",
+    "msvc_fp": "Floating point",
+    "msvc_fp./fp:precise": "favor precision",
+    "msvc_fp./fp:strict": "favor safety and control",
+    "msvc_fp./fp:fast": "favor speed",
     "msvc_compile_cpp": "compile as C++",
     "msvc_use_rtti": "enable C++ RTTI",
     "msvc_use_ehsc": "enable C++ EH",
