--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -88,6 +88,7 @@
     "mips_pro_744": "MIPS Pro 7.4.4",
 
     "msvc4.0": "Microsoft Visual C/C++ 4.0",
+    "msvc4.1": "Microsoft Visual C/C++ 4.1",
     "msvc4.2": "Microsoft Visual C/C++ 4.2",
     "msvc6.0": "Microsoft Visual C/C++ 6.0",
     "msvc6.3": "Microsoft Visual C/C++ 6.0 Service Pack 3",
