--- a/frontend/src/lib/i18n/locales/en/decompilers.json
+++ b/frontend/src/lib/i18n/locales/en/decompilers.json
@@ -1,3 +1,36 @@
 {
-    "m2c": "m2c"
+    "m2c": "m2c",
+    "m2c_comment_style": "Comment style",
+    "m2c_comment_style.--comment-style=multiline": "C-style `/* ... */` (default)",
+    "m2c_comment_style.--comment-style=oneline": "C++-style `// ...`",
+    "m2c_comment_style.--comment-style=none": "No comments",
+    "m2c_allman": "Allman braces",
+    "m2c_knr": "Allman braces",
+    "m2c_comment_alignment": "Comment alignment",
+    "m2c_comment_alignment.--comment-column=0": "Unaligned",
+    "m2c_comment_alignment.--comment-column=52": "Justify comments to column number 52 (default)",
+    "m2c_indent_switch_contents": "Indent switch contents an extra level",
+    "m2c_leftptr": "* to the left",
+    "m2c_zfill_constants": "0-fill constants",
+    "m2c_unk_underscore": "Emit unk_X instead of unkX",
+    "m2c_hex_case": "Hex case labels",
+    "m2c_force_decimal": "Force decimal values",
+    "m2c_global_decl": "Global declarations",
+    "m2c_global_decl.--globals used": "Only includes symbols used by the decompiled functions that are not in the context (default)",
+    "m2c_global_decl.--globals all": "Includes all globals with entries in .data/.rodata/.bss, as well as inferred symbols",
+    "m2c_global_decl.--globals none": "Does not emit any global declarations",
+    "m2c_sanitize_tracebacks": "Sanitize tracebacks",
+    "m2c_valid_syntax": "Emit valid C syntax",
+    "m2c_reg_vars": "Use single var for:",
+    "m2c_reg_vars.--reg-vars r29,r30,r31": "Custom",
+    "m2c_void": "Force void return type",
+    "m2c_debug": "Debug info",
+    "m2c_no_andor": "Disable &&/||",
+    "m2c_no_casts": "Hide type casts",
+    "m2c_no_ifs": "Use gotos for everything",
+    "m2c_no_switches": "Disable irregular switch detection",
+    "m2c_no_unk_inference": "Disable unknown struct/type inference",
+    "m2c_heuristic_strings": "Detect strings in rodata even when not defined using .asci/.asciz.",
+    "m2c_stack_structs": "Stack struct templates",
+    "m2c_deterministic_vars": "Name temp and phi vars after their location in asm"
 }
