Add more MSVC flags, change calling conventions one into dropdown

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -383,15 +383,33 @@
     "msvc_fp./fp:precise": "favor precision",
     "msvc_fp./fp:strict": "favor safety and control",
     "msvc_fp./fp:fast": "favor speed",
+    "msvc_inline": "In-line function expansion",
+    "msvc_inline./Ob0": "Disable",
+    "msvc_inline./Ob1": "Only __inline",
+    "msvc_inline./Ob2": "Any Suitable",
+    "msvc_alignment": "Struct member alignment",
+    "msvc_alignment./Zp1": "1 Byte",
+    "msvc_alignment./Zp2": "2 Bytes",
+    "msvc_alignment./Zp4": "4 Bytes",
+    "msvc_alignment./Zp8": "8 Bytes",
+    "msvc_alignment./Zp16": "16 Bytes",
+    "msvc_rtlib": "Use run-time library",
+    "msvc_rtlib./ML": "Single-Threaded",
+    "msvc_rtlib./MT": "Multithreaded",
+    "msvc_rtlib./MD": "Multithreaded DLL",
+    "msvc_rtlib./MLd": "Debug Single-Threaded",
+    "msvc_rtlib./MTd": "Debug Multithreaded",
+    "msvc_rtlib./MDd": "Debug Multithreaded DLL",
     "msvc_compile_cpp": "compile as C++",
     "msvc_use_rtti": "enable C++ RTTI",
     "msvc_use_ehsc": "enable C++ EH",
     "msvc_disable_stack_checking": "disable stack checking calls",
     "msvc_disable_buffer_security_checks": "disable buffer security checks",
     "msvc_runtime_debug_checks": "enable runtime debug checks",
-    "msvc_cdecl": "__cdecl calling convention",
-    "msvc_fastcall": "__fastcall calling convention",
-    "msvc_stdcall": "__stdcall calling convention",
+    "msvc_callconv": "Calling convention",
+    "msvc_callconv./Gd": "__cdecl",
+    "msvc_callconv./Gr": "__fastcall",
+    "msvc_callconv./Gz": "__stdcall",
 
     "shc_opt_level": "Optimization level",
     "shc_opt_level.-optimize=0": "Optimization: off",
