Add gc_wii mwcc_233_159p1 (GC/1.1p1)

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -118,6 +118,7 @@
     "mwcc_20_87": "2.0 build 87 (MW 1.2sp4)",
     "mwcc_233_144": "2.3.3 build 144 (GC MW 1.0)",
     "mwcc_233_159": "2.3.3 build 159 (GC MW 1.1)",
+    "mwcc_233_159p1": "2.3.3 build 159 (Patched GC MW 1.1)",
     "mwcc_233_163": "2.3.3 build 163 (GC MW 1.2.5)",
     "mwcc_233_163e": "2.3.3 build 163 (GC MW 1.2.5e)",
     "mwcc_233_163n": "2.3.3 build 163 (GC MW 1.2.5n)",
