--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -102,11 +102,11 @@
     "msvc4.1": "Microsoft Visual C/C++ 4.1",
     "msvc4.2": "Microsoft Visual C/C++ 4.2",
     "msvc6.0": "Microsoft Visual C/C++ 6.0",
-    "msvc6.3": "Microsoft Visual C/C++ 6.0 Service Pack 3",
-    "msvc6.4": "Microsoft Visual C/C++ 6.0 Service Pack 4",
-    "msvc6.5": "Microsoft Visual C/C++ 6.0 Service Pack 5",
-    "msvc6.5pp": "Microsoft Visual C/C++ 6.0 Service Pack 5 with Processor Pack",
-    "msvc6.6": "Microsoft Visual C/C++ 6.0 Service Pack 6",
+    "msvc6.3": "Microsoft Visual C/C++ 6.0 SP3",
+    "msvc6.4": "Microsoft Visual C/C++ 6.0 SP4",
+    "msvc6.5": "Microsoft Visual C/C++ 6.0 SP5",
+    "msvc6.5pp": "Microsoft Visual C/C++ 6.0 SP5 w/ Processor Pack",
+    "msvc6.6": "Microsoft Visual C/C++ 6.0 SP6",
     "msvc7.0": "Microsoft Visual C/C++ 7.0 .NET 2002",
     "msvc7.1": "Microsoft Visual C/C++ 7.1 .NET 2003",
     "msvc8.0": "Microsoft Visual C/C++ 8.0",
