--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -428,12 +428,24 @@
     "shc_opt_level.-optimize=0": "Optimization: off",
     "shc_opt_level.-optimize=1": "Optimization: on",
     "shc_opt_type": "Optimization type",
-    "shc_opt_type.speed": "Optimization for speed",
-    "shc_opt_type.size": "Optimization for size",
+    "shc_opt_type.-speed": "Optimization for speed",
+    "shc_opt_type.-size": "Optimization for size",
+    "shc_opt_type.-nospeed": "Optimization for both speed and size",
     "shc_round": "Floating-point rounding options",
     "shc_round.-round=zero": "Round to zero",
     "shc_round.-round=nearest": "Round to nearest",
+    "shc_pic": "Position-independent code",
+    "shc_pic.-pic=0": "Position-independent code: off",
+    "shc_pic.-pic=1": "Position-independent code: on",
+    "shc_fpu": "Floating-point precision options",
+    "shc_fpu.-fpu=single": "Treat float as single",
+    "shc_fpu.-fpu=double": "Treat float as double",
+    "shc_extra": "Extra options",
+    "shc_extra.-extra=a=800": "Align literal pools to 32 bytes",
+    "shc_extra.-extra=a=1000": "Reduce literal pool",
+    "shc_extra.-extra=a=1800": "Align literal pools to 32 bytes + reduce literal pool",
     "shc_debug": "Debug",
+    "shc_aggressive": "Use float multiplication for division with constant",
     "shc_loop": "Loop unrolling",
     "shc_inline": "Inline static functions",
 
