Renamed dreamcast extra=a flags to extra=asm for clarity

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -441,9 +441,9 @@
     "shc_fpu.-fpu=single": "Treat float as single",
     "shc_fpu.-fpu=double": "Treat float as double",
     "shc_extra": "Extra options",
-    "shc_extra.-extra=a=800": "Align literal pools to 32 bytes",
-    "shc_extra.-extra=a=1000": "Reduce literal pool",
-    "shc_extra.-extra=a=1800": "Align literal pools to 32 bytes + reduce literal pool",
+    "shc_extra.-extra=asm=800": "Align literal pools to 32 bytes",
+    "shc_extra.-extra=asm=1000": "Reduce literal pool",
+    "shc_extra.-extra=asm=1800": "Align literal pools to 32 bytes + reduce literal pool",
     "shc_debug": "Debug",
     "shc_aggressive": "Use float multiplication for division with constant",
     "shc_loop": "Loop unrolling",
