Add Wii U platform with ghs 5.3.22 (#1753)
* Add Wii U platform with ghs 5.3.22

* Update m2c_wrapper.py

* Use wine for GHS

* Add GHS inlining modes

* Set GHS temporary directory

* Use local temp file for GHS

* biome + ruff

* Update wiiu.svg

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -81,6 +81,8 @@
     "gcc2.8.1pm": "GCC 2.8.1 (Paper Mario)",
     "gcc4.4.0-mips64-elf": "GCC 4.4.0 (mips64-elf)",
 
+    "ghs5.3.22": "GHS 5.3.22",
+
     "ido5.3_irix": "IDO 5.3",
     "ido5.3_asm_irix": "IDO 5.3 AS",
     "ido5.3_c++_irix": "IDO 5.3 C++",
