--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -252,6 +252,7 @@
     "cygnus-2.7-96Q3": "cygnus-2.7-96Q3 SOA-960904",
 
     "ndk-r8e-gcc-4.7": "Android NDK r8e (GCC 4.7)",
+    "ndk-r8e-gcc-4.4.3": "Android NDK r8e (GCC 4.4.3)",
 
     "armcc_opt_level": "Optimization level",
     "armcc_opt_level.-O0": "No optimization",
