--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -5,9 +5,12 @@
 
     "armcc_40_771": "4.0 build 771",
     "armcc_40_821": "4.0 build 821",
+    "armcc_40_865": "4.0 build 865",
+    "armcc_40_902": "4.0 build 902",
     "armcc_41_561": "4.1 build 561",
     "armcc_41_713": "4.1 build 713",
     "armcc_41_791": "4.1 build 791",
+    "armcc_41_844": "4.1 build 844",
     "armcc_41_894": "4.1 build 894",
     "armcc_41_921": "4.1 build 921",
     "armcc_41_1049": "4.1 build 1049",
